[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameDVDCardtridge/WhereIsLoadingBarFunctions/Scenes/qub.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/WhereIsLoadingBarFunctions/Scenes/GenLoad.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 10, 10 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 20, 0.184204, 20 )

[node name="GenLoad" type="Node"]
script = ExtResource( 2 )

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 11 )

[node name="Floor" type="RigidBody" parent="Spatial"]
mode = 1

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Floor"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Floor"]
shape = SubResource( 2 )

[node name="qub" parent="Spatial" instance=ExtResource( 1 )]

[node name="Spawns" type="Spatial" parent="Spatial"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepContains" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 84.0
margin_right = 1920.0
margin_bottom = 899.0
rect_min_size = Vector2( 0, 270 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StepContains"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 958.0
margin_bottom = 815.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "https://github.com/Perkedel/Where_Is_LoadingBar_Functionality

Step:
1. Press 1. QUEUE RESOURCE. Queue Resource and Start Loading The Node. Wait 100% loading bar.
2. Press 2. INSTANCE RESOURCE. Instance the Resource out of the Queue. Loading bar goes 0 again.
3. Press 3. SPAWN RESOURCE. Spawn the instance into this 3D Space Node.

Respawning more:
1. Press 2. INSTANCE RESOURCE. Instance the Resource again.
2. Press 3. SPAWN RESOURCE. Spawn that instance again.

Cancel:
1. Press X. CANCEL RESOURCE. Cancel the queue Resource. 
Probably has to be done before loading completes.
If completed, it will be Press UI Left instanceable instead, cannot cancel.

Sponsored by Hexagon Engine! 
https://github.com/Perkedel/HexagonEngine"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Control/VBoxContainer/StepContains"]
self_modulate = Color( 1, 1, 1, 0.294118 )
show_behind_parent = true
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 815.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/StepContains/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSetCheck" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer/StepContains/Panel/VBoxContainer"]
margin_right = 958.0
margin_bottom = 33.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
text = "LoadSet Instanced"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyToShowCheck" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer/StepContains/Panel/VBoxContainer"]
margin_top = 37.0
margin_right = 958.0
margin_bottom = 70.0
focus_mode = 0
button_mask = 0
enabled_focus_mode = 0
text = "Ready To Show"

[node name="Empty" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 903.0
margin_right = 1920.0
margin_bottom = 936.0
size_flags_horizontal = 3

[node name="QUITButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/Empty"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 69.0
margin_bottom = 33.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 940.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 140 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/CenterContainer"]
margin_left = 341.0
margin_top = 20.0
margin_right = 1579.0
margin_bottom = 120.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonA" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 237.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1. QUEUE RESOURCE"

[node name="ButtonB" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 513.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2. INSTANCE RESOURCE"

[node name="ButtonC" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 517.0
margin_right = 757.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3. SPAWN RESOURCE"

[node name="ButtonD" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 761.0
margin_right = 1006.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X. CANCEL RESOURCE"

[node name="ButtonD2" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 1010.0
margin_right = 1238.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "/!\\. DELETE SPAWNS"

[node name="QuitConfirmationDialog" type="ConfirmationDialog" parent="CanvasLayer/Control"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -203.0
margin_right = 505.0
margin_bottom = 203.0
window_title = "Mohon konfirmasi..."
dialog_text = "Are You sure to quit?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Empty/QUITButton" to="." method="_on_QUITButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer/ButtonA" to="." method="_on_ButtonA_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer/ButtonB" to="." method="_on_ButtonB_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer/ButtonC" to="." method="_on_ButtonC_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer/ButtonD" to="." method="_on_ButtonD_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/HBoxContainer/ButtonD2" to="." method="_on_ButtonD2_pressed"]
[connection signal="confirmed" from="CanvasLayer/Control/QuitConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="popup_hide" from="CanvasLayer/Control/QuitConfirmationDialog" to="." method="_on_QuitConfirmationDialog_popup_hide"]
